--- a/style/animation.less
+++ b/style/animation.less
@@ -14,7 +14,7 @@
   padding-bottom:20px;
   margin-top:10px;
   margin-bottom:20px;
-  transition:  all .5s ease-in .2s;
+  transition:  all .5s ease-in .2s, padding-top .2s ease-in .2s;
 }
 
 .cartouche-leave {
