--- a/style/cartouche.less
+++ b/style/cartouche.less
@@ -18,6 +18,11 @@
   padding-bottom:5px;
 }
 
+.station-row.nostop {
+    font-style: italic;
+    color:#888;
+}
+
 .btn-fermer {
   width:100%;
   margin-top:10px;
