--- a/style/page.less
+++ b/style/page.less
@@ -17,16 +17,30 @@ body {
   padding-left: 15px;
 }
 
+
 /* Custom page header */
 .header {
+  display:flex;
+  flex-flow:row;
+  justify-content: space-between;
   border-bottom: 1px solid #e5e5e5;
 }
+
+.header > nav
+{
+  flex: 0 0 auto;
+}
+
 /* Make the masthead heading the same height as the navigation */
 .header h3 {
   padding-bottom: 19px;
   margin-top: 0;
   margin-bottom: 0;
   line-height: 40px;
+  overflow-x: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  min-width: 50px;
 }
 
 /* Custom page footer */
@@ -44,6 +58,11 @@ body {
 
 .container-narrow > hr {
   margin: 30px 0;
+}
+
+.text-no-data
+{
+  margin-top:20px;
 }
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 922px) {
